# ThemeJson

./: .gitignore  CMakeLists.txt  README.md  colorTheme.json  conanfile.py  ground_control.json  settings.json
.cache/clangd/index/: main.cc.A8A74D53E9C87263.idx  palette_model.cc.ABC7EBF3129F541F.idx  palette_model.h.52B5F85EC4438B3C.idx
src/c++/ThemeJson/: main.cc  palette_model.cc  palette_model.h
src/qml/: ColorEditor.qml  main.qml
